--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
         "@antfu/eslint-config": "^6.2.0",
         "eslint": "^9.39.1",
         "eslint-plugin-format": "^1.0.2",
-        "husky": "^9.1.7",
         "lint-staged": "^16.2.6"
+    },
+    "lint-staged": {
+        "*.{js, jsx,ts,tsx}": [
+            "eslint --fix"
+        ]
     }
 }
