--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     },
     "dependencies": {
         "@nuxt/eslint": "1.10.0",
+        "@nuxt/icon": "2.1.0",
+        "@tailwindcss/vite": "^4.1.16",
+        "install": "^0.13.0",
         "nuxt": "^4.2.0",
+        "tailwindcss": "^4.1.16",
         "vue": "^3.5.22",
         "vue-router": "^4.6.3"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^6.2.0",
+        "@iconify-json/tabler": "^1.2.23",
+        "daisyui": "^5.4.4",
         "eslint": "^9.39.1",
         "eslint-plugin-format": "^1.0.2",
         "lint-staged": "^16.2.6"
