--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@nuxt/eslint": "1.10.0",
         "@nuxt/icon": "2.1.0",
+        "@nuxtjs/color-mode": "3.5.2",
         "@tailwindcss/vite": "^4.1.16",
         "install": "^0.13.0",
         "nuxt": "^4.2.0",
