--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
         "nuxt": "^4.2.0",
         "tailwindcss": "^4.1.16",
         "vue": "^3.5.22",
-        "vue-router": "^4.6.3"
+        "vue-router": "^4.6.3",
+        "zod": "^4.1.12"
     },
     "devDependencies": {
         "@antfu/eslint-config": "^6.2.0",
         "@iconify-json/tabler": "^1.2.23",
+        "@types/node": "^24.10.0",
         "daisyui": "^5.4.4",
         "eslint": "^9.39.1",
         "eslint-plugin-format": "^1.0.2",
