--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "build": "nuxt build",
-        "dev": "nuxt dev",
+        "dev:db": "pnpm exec drizzle-kit studio",
+        "dev": "concurrently  \"nuxt dev\" \"pnpm run dev:db\"",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
@@ -12,12 +13,16 @@
         "lint:fix": "eslint . --fix"
     },
     "dependencies": {
+        "@libsql/client": "^0.15.15",
         "@nuxt/eslint": "1.10.0",
         "@nuxt/icon": "2.1.0",
         "@nuxtjs/color-mode": "3.5.2",
         "@tailwindcss/vite": "^4.1.16",
+        "concurrently": "^9.2.1",
+        "drizzle-orm": "^0.44.7",
         "install": "^0.13.0",
         "nuxt": "^4.2.0",
+        "postgres": "^3.4.7",
         "tailwindcss": "^4.1.16",
         "vue": "^3.5.22",
         "vue-router": "^4.6.3",
@@ -28,9 +33,11 @@
         "@iconify-json/tabler": "^1.2.23",
         "@types/node": "^24.10.0",
         "daisyui": "^5.4.4",
+        "drizzle-kit": "^0.31.6",
         "eslint": "^9.39.1",
         "eslint-plugin-format": "^1.0.2",
-        "lint-staged": "^16.2.6"
+        "lint-staged": "^16.2.6",
+        "tsx": "^4.20.6"
     },
     "lint-staged": {
         "*.{js, jsx,ts,tsx}": [
