--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@nuxt/icon": "2.1.0",
         "@nuxtjs/color-mode": "3.5.2",
         "@tailwindcss/vite": "^4.1.16",
+        "better-auth": "^1.3.34",
         "concurrently": "^9.2.1",
         "drizzle-orm": "^0.44.7",
         "install": "^0.13.0",
