--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "@nuxt/eslint": "1.10.0",
         "@nuxt/icon": "2.1.0",
         "@nuxtjs/color-mode": "3.5.2",
+        "@pinia/nuxt": "0.11.3",
         "@tailwindcss/vite": "^4.1.16",
         "better-auth": "^1.3.34",
         "concurrently": "^9.2.1",
         "drizzle-orm": "^0.44.7",
         "install": "^0.13.0",
         "nuxt": "^4.2.0",
+        "pinia": "^3.0.4",
         "postgres": "^3.4.7",
         "tailwindcss": "^4.1.16",
         "vue": "^3.5.22",
