--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
         "@nuxt/eslint": "1.10.0",
         "@nuxt/icon": "2.1.0",
         "@nuxtjs/color-mode": "3.5.2",
+        "@nuxtjs/i18n": "10.2.1",
         "@pinia/nuxt": "0.11.3",
         "@tailwindcss/vite": "^4.1.16",
         "better-auth": "^1.3.34",
+        "class-variance-authority": "^0.7.1",
         "concurrently": "^9.2.1",
         "drizzle-orm": "^0.44.7",
         "install": "^0.13.0",
